--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="desktopHD"> 
             <!--header-->  
             <div class="header">
-                <div class="logo_KONSTRUCT">
+                <div class="logo">
                     <p class="logo_text">KONSTRU</p>
                     <p class="logo_triangle"></p>
                     <p class="logo_text">T</p>
